networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: redis-network-policy

  namespace: banking

spec:

  podSelector:

    matchLabels:

      app: redis

  policyTypes:

  - Ingress

  - Egress

  ingress:

  - from:

    - namespaceSelector:

        matchLabels:

          name: banking

    ports:

    - protocol: TCP

      port: 6379

  egress:

  - {}
